Travel stipend: convert ordered list

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -16,23 +16,25 @@ Please read the following page carefully before booking any travel to conference
 
 <h1 id="steps">Steps to take before and after you travel</h1>
 
-1. Make sure your travel will start <a href="{% url 'travel-stipend' %}#timeframe">within the time that your travel allowance is active</a>.
+<ol>
+	<li>Make sure your travel will start <a href="{% url 'travel-stipend' %}#timeframe">within the time that your travel allowance is active</a>.</li>
 
-2. Confirm with your mentor that the <a href="{% url 'travel-stipend' %}#events">event or conference meets our requirements</a>.
+	<li>Confirm with your mentor that the <a href="{% url 'travel-stipend' %}#events">event or conference meets our requirements</a>.</li>
 
-3. <a href="{% url 'travel-stipend' %}#preapproval">Check whether you need pre-approval</a> from the Outreachy PLC for your travel expenses.
+	<li><a href="{% url 'travel-stipend' %}#preapproval">Check whether you need pre-approval</a> from the Outreachy PLC for your travel expenses.</li>
 
-4. <a href="{% url 'travel-stipend' %}#scholarships">Apply for any scholarships</a> your conference offers to cover travel costs.
+	<li><a href="{% url 'travel-stipend' %}#scholarships">Apply for any scholarships</a> your conference offers to cover travel costs.</li>
 
-5. <a href="{% url 'travel-stipend' %}#airfare">Save a flight search screenshot</a> from a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>.
+	<li><a href="{% url 'travel-stipend' %}#airfare">Save a flight search screenshot</a> from a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>.</li>
 
-6. While on your trip, you may need to <a href="{% url 'travel-stipend' %}#receipts">save some receipts</a>.
+	<li>While on your trip, you may need to <a href="{% url 'travel-stipend' %}#receipts">save some receipts</a>.</li>
 
-7. During your event, take notes about what you learned or accomplished, and how it improved your ability to contribute to free and open source software, for your trip report blog post.
+	<li>During your event, take notes about what you learned or accomplished, and how it improved your ability to contribute to free and open source software, for your trip report blog post.</li>
 
-8. Publish your trip report blog post.
+	<li>Publish your trip report blog post.</li>
 
-9. Submit a <a href="{% url 'travel-stipend' %}#reimbursement">reimbursement request</a> within 2 weeks of the last day of travel. If you submit a reimbursement more than 90 days after the last day of your trip, Conservancy will not refund your travel.
+	<li>Submit a <a href="{% url 'travel-stipend' %}#reimbursement">reimbursement request</a> within 2 weeks of the last day of travel. If you submit a reimbursement more than 90 days after the last day of your trip, Conservancy will not refund your travel.</li>
+</ol>
 
 <h1 id='timeframe'>When does the travel have to happen?</h1>
 
@@ -67,9 +69,11 @@ Yes, you can use your travel allowance in parts for multiple trips. While you ca
 
 You can use the travel allowance to travel or gain admittance to conferences or meetings, which meet the following two requirements:
 
-1) '''Strong free and open source software component.''' As the Software Freedom Conservancy is a 501(c)(3) charity in the United States, all activity supported by the travel allowance must forward the organization's mission to promote free and open source software in the public interest. The event you are attending or the material you are presenting needs to have a strong free and open source software component.
+<ol>
+	<li>'''Strong free and open source software component.''' As the Software Freedom Conservancy is a 501(c)(3) charity in the United States, all activity supported by the travel allowance must forward the organization's mission to promote free and open source software in the public interest. The event you are attending or the material you are presenting needs to have a strong free and open source software component.</li>
 
-2) '''Your mentor considers it most relevant.''' Each organization that participates in Outreachy has events that are specific to it or the technologies it uses, which might be most relevant for you to attend. Please consult with your mentor about what is the best and most relevant to your project and organization way to use your travel allowance. In some cases, your mentor and you might agree that a generally themed FOSS event close to you is the most relevant use of your travel allowance due to geographical considerations. Do not book your travel before getting a confirmation from your mentor or organization coordinator that they consider it most relevant and will want your travel allowance applied to it.
+	<li>'''Your mentor considers it most relevant.''' Each organization that participates in Outreachy has events that are specific to it or the technologies it uses, which might be most relevant for you to attend. Please consult with your mentor about what is the best and most relevant to your project and organization way to use your travel allowance. In some cases, your mentor and you might agree that a generally themed FOSS event close to you is the most relevant use of your travel allowance due to geographical considerations. Do not book your travel before getting a confirmation from your mentor or organization coordinator that they consider it most relevant and will want your travel allowance applied to it.</li>
+</ol>
 
 Here are some examples of generally themed FOSS events, along with their approximate dates:
 
