Travel stipend: add paragraph tag

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -8,11 +8,11 @@ Outreachy Travel Stipend
 
 <h1>What is the travel allowance?</h1>
 
-Attending talks, workshops, and meeting other contributors in person is fun and can help you get up to speed faster. As part of your internship, you have a $500 USD travel allowance. You will not be reimbursed for more than $500.
+<p>Attending talks, workshops, and meeting other contributors in person is fun and can help you get up to speed faster. As part of your internship, you have a $500 USD travel allowance. You will not be reimbursed for more than $500.</p>
 
-You can use the travel allowance to go to a conference, event, or meeting that is relevant to your internship project, or is a Free and Open Source Software (FOSS) conference.
+<p>You can use the travel allowance to go to a conference, event, or meeting that is relevant to your internship project, or is a Free and Open Source Software (FOSS) conference.</p>
 
-Please read the following page carefully before booking any travel to conferences.
+<p>Please read the following page carefully before booking any travel to conferences.</p>
 
 <h1 id="steps">Steps to take before and after you travel</h1>
 
@@ -38,7 +38,7 @@ Please read the following page carefully before booking any travel to conference
 
 <h1 id='timeframe'>When does the travel have to happen?</h1>
 
-The travel allowance is available to you for travel that starts between the day the acceptance results are announced and a year from the beginning of the internship. The one year window is provided to make sure that the travel allowance can be used for travelling to any major yearly event. Currently, we are also typically able to provide extensions for expired travel allowances, upon request. If your unused travel allowance has expired and you have identified a relevant event you could use it for, please request an extension before making plans for the trip by e-mailing outreachy AT SPAMFREE sfconservancy DOT org .
+<p>The travel allowance is available to you for travel that starts between the day the acceptance results are announced and a year from the beginning of the internship. The one year window is provided to make sure that the travel allowance can be used for travelling to any major yearly event. Currently, we are also typically able to provide extensions for expired travel allowances, upon request. If your unused travel allowance has expired and you have identified a relevant event you could use it for, please request an extension before making plans for the trip by e-mailing outreachy AT SPAMFREE sfconservancy DOT org .</p>
 
 <h2>Active</h2>
 
@@ -63,11 +63,11 @@ The travel allowance is available to you for travel that starts between the day 
 
 <h2>Can the travel allowance be used in parts?</h2>
 
-Yes, you can use your travel allowance in parts for multiple trips. While you can combine multiple trips in one reimbursement request, we ask that you submit your reimbursement request within two weeks of the completion of the earliest trip. Note that Conservancy does not reimburse for trips that completed more than 90 days before the request was submitted.
+<p>Yes, you can use your travel allowance in parts for multiple trips. While you can combine multiple trips in one reimbursement request, we ask that you submit your reimbursement request within two weeks of the completion of the earliest trip. Note that Conservancy does not reimburse for trips that completed more than 90 days before the request was submitted.</p>
 
 <h1 id='events'>Event requirements</h1>
 
-You can use the travel allowance to travel or gain admittance to conferences or meetings, which meet the following two requirements:
+<p>You can use the travel allowance to travel or gain admittance to conferences or meetings, which meet the following two requirements:</p>
 
 <ol>
 	<li><b>Strong free and open source software component.</b> As the Software Freedom Conservancy is a 501(c)(3) charity in the United States, all activity supported by the travel allowance must forward the organization's mission to promote free and open source software in the public interest. The event you are attending or the material you are presenting needs to have a strong free and open source software component.</li>
@@ -75,7 +75,7 @@ You can use the travel allowance to travel or gain admittance to conferences or 
 	<li><b>Your mentor considers it most relevant.</b> Each organization that participates in Outreachy has events that are specific to it or the technologies it uses, which might be most relevant for you to attend. Please consult with your mentor about what is the best and most relevant to your project and organization way to use your travel allowance. In some cases, your mentor and you might agree that a generally themed FOSS event close to you is the most relevant use of your travel allowance due to geographical considerations. Do not book your travel before getting a confirmation from your mentor or organization coordinator that they consider it most relevant and will want your travel allowance applied to it.</li>
 </ol>
 
-Here are some examples of generally themed FOSS events, along with their approximate dates:
+<p>Here are some examples of generally themed FOSS events, along with their approximate dates:</p>
 
 <table class="table table-bordered">
 	<thread class="thread-dark">
@@ -160,42 +160,42 @@ Here are some examples of generally themed FOSS events, along with their approxi
 	</tr>
 </table>
 
-More events can be found on the <a href="http://opensource.com/resources/conferences-and-events-monthly">opensource.com event calendar</a> and the <a href="https://old.lwn.net/Calendar/">Linux Weekly News event calendar</a>. Events with travel sponsorships can be found at <a href="https://diversitytickets.org/en/events">diversitytickets.org</a>. Events that are looking for speaking proposals that have a good Code of Conduct are often promoted by <a href="https://twitter.com/CallbackWomen">@callbackwomen on Twitter</a>.
+<p>More events can be found on the <a href="http://opensource.com/resources/conferences-and-events-monthly">opensource.com event calendar</a> and the <a href="https://old.lwn.net/Calendar/">Linux Weekly News event calendar</a>. Events with travel sponsorships can be found at <a href="https://diversitytickets.org/en/events">diversitytickets.org</a>. Events that are looking for speaking proposals that have a good Code of Conduct are often promoted by <a href="https://twitter.com/CallbackWomen">@callbackwomen on Twitter</a>.</p>
 
 <h1 step='preapproval'>What types of travel need pre-approval?</h1>
 
-Please read <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Conservancy's policy</a> carefully for full details on what can be covered and what might need additional pre-approval. For example, you will need to get pre-approval for conference registrations exceeding $100 a day, hotel costs exceeding per-diem for your destination, airfare and train tickets purchased less than 14 days in advance, and car rentals. Conservancy's policy is the final authority on what can be covered.
+<p>Please read <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Conservancy's policy</a> carefully for full details on what can be covered and what might need additional pre-approval. For example, you will need to get pre-approval for conference registrations exceeding $100 a day, hotel costs exceeding per-diem for your destination, airfare and train tickets purchased less than 14 days in advance, and car rentals. Conservancy's policy is the final authority on what can be covered.</p>
 
-Do not book your travel before getting any necessary pre-approval from Outreachy and Conservancy.
+<p>Do not book your travel before getting any necessary pre-approval from Outreachy and Conservancy.</p>
 
-If a pre-approval is required, it needs to be requested from Outreachy's Project Leadership Committee (PLC), which currently includes Cindy Pallares, Karen Sandler, Tony Sebro, Sage Sharp, and Marina Zhurakhinskaya.  ONLY in cases that you need to book travel that doesn't comply with the policy, <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for a pre-approval in an e-mail with a subject line "[Round Year]-[Round Start Month]: [Your Last Name]: Travel pre-approval needed". For example, if you participated in the round of Outreachy that started in May 2016 and your last name is Smith, you would use the following subject: "2016-05: Smith: Travel pre-approval needed".
+<p>If a pre-approval is required, it needs to be requested from Outreachy's Project Leadership Committee (PLC), which currently includes Cindy Pallares, Karen Sandler, Tony Sebro, Sage Sharp, and Marina Zhurakhinskaya.  ONLY in cases that you need to book travel that doesn't comply with the policy, <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for a pre-approval in an e-mail with a subject line "[Round Year]-[Round Start Month]: [Your Last Name]: Travel pre-approval needed". For example, if you participated in the round of Outreachy that started in May 2016 and your last name is Smith, you would use the following subject: "2016-05: Smith: Travel pre-approval needed".</p>
 
 <h1>What can the travel allowance cover?</h1>
 
-Generally, the travel allowance can cover transportation, lodging, visa, meal, internet, or admission expenses for activities through which you can improve your understanding of your project, organization, and free and open source software by working with or learning from other people.  You can use your travel allowance to go to an office of the organization you are working with, an event where other contributors from your organization will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.
+<p>Generally, the travel allowance can cover transportation, lodging, visa, meal, internet, or admission expenses for activities through which you can improve your understanding of your project, organization, and free and open source software by working with or learning from other people.  You can use your travel allowance to go to an office of the organization you are working with, an event where other contributors from your organization will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.</p>
 
 <h2 id='airfare'>Airfare</h2>
-For air travel, please be sure to comply with Conservancy's <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">low fare policy</a> and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">required</a> for Conservancy to do an airfare reimbursement.
+<p>For air travel, please be sure to comply with Conservancy's <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">low fare policy</a> and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">required</a> for Conservancy to do an airfare reimbursement.</p>
 
 <h2 id='receipts'>Saving receipts</h2>
 
-You will need to save the receipts for travel to get to your destination, for hotel, and for conference registration. Note that you won't need to provide receipts for meals and other incidental expenses like local transportation that are part of the <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#meals-and-incidental-expenses">Meals and Incidental Expenses per diem amount</a>
+<p>You will need to save the receipts for travel to get to your destination, for hotel, and for conference registration. Note that you won't need to provide receipts for meals and other incidental expenses like local transportation that are part of the <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#meals-and-incidental-expenses">Meals and Incidental Expenses per diem amount</a></p>
 
 <h1 id='scholarships'>What if my expenses are over $500?</h1>
 
 <a href="https://openhatch.org/wiki/Opportunities/Travel_Grants">Many conferences offer scholarships and reduced or waived admission fees</a> for low-income participants or diversity scholarships. Please investigate and use these in addition to relying on the travel allowance. Outreachy will not cover more than $500.
 
-If you wish to use scholarships or travel funding, most events require you to apply several months before the conference. Outreachy is not involved in travel funding for any particular conference or event, so you will need to work with the event organizer to submit a travel funding application. If in doubt, email the event organizers and ask when the deadline for submitting travel funding requests is.
+<p>If you wish to use scholarships or travel funding, most events require you to apply several months before the conference. Outreachy is not involved in travel funding for any particular conference or event, so you will need to work with the event organizer to submit a travel funding application. If in doubt, email the event organizers and ask when the deadline for submitting travel funding requests is.</p>
 
-Each event will have a different travel policy than the Software Freedom Conservancy travel policy. You may need to provide additional documentation (such as meal receipts). Some events may not require you to write a blog post about the event. Please check with the event organizer for what documentation is needed for their travel reimbursements.
+<p>Each event will have a different travel policy than the Software Freedom Conservancy travel policy. You may need to provide additional documentation (such as meal receipts). Some events may not require you to write a blog post about the event. Please check with the event organizer for what documentation is needed for their travel reimbursements.</p>
 
 <h1 id='reimbursement'>How do I get reimbursed for the travel allowance by Conservancy?</h1>
 
-Unless you were told otherwise, Conservancy is the organization that will reimburse your travel. 
+<p>Unless you were told otherwise, Conservancy is the organization that will reimburse your travel. </p>
 
-Around the time that their second internship payment is sent, each intern receives an e-mail with a ticket number they can use to request reimbursement for their travel stipend. The e-mail has the intern's round, name, and the phrase "travel reimbursement request" in its subject line. Interns should reply to that email, including their project mentor on Cc, with their reimbursement request. Once the email is received by Conservancy's request ticket system, it will automatically send an email to the Outreachy organizers. If you are ready to request your reimbursement early in your internship round, before the ticket is created for you, you can <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for us to ask Conservancy to create such ticket for you.
+<p>Around the time that their second internship payment is sent, each intern receives an e-mail with a ticket number they can use to request reimbursement for their travel stipend. The e-mail has the intern's round, name, and the phrase "travel reimbursement request" in its subject line. Interns should reply to that email, including their project mentor on Cc, with their reimbursement request. Once the email is received by Conservancy's request ticket system, it will automatically send an email to the Outreachy organizers. If you are ready to request your reimbursement early in your internship round, before the ticket is created for you, you can <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for us to ask Conservancy to create such ticket for you.</p>
 
-The email body should be in the following form:
+<p>The email body should be in the following form:</p>
 <pre>
 Greetings,
 
@@ -220,10 +220,10 @@ I have not included receipts for things that fall under the Meals and Incidental
 [INCLUDE PAYMENT INFORMATION OR WHETHER IT IS OK TO USE THE SAME PAYMENT INFORMATION FROM YOUR INTERNSHIP PAYMENTS.]
 </pre>
 
-Within 30 days of your e-mail, Conservancy will send you the reimbursement or inform you if it requires additional information.
+<p>Within 30 days of your e-mail, Conservancy will send you the reimbursement or inform you if it requires additional information.</p>
 
 <h1>How do I get reimbursed for the travel allowance by my organization?</h1>
 
-If a participating organization has a process for reimbursing travelling expenses of its contributors, it might choose to do so itself for its Outreachy interns. In that case the organization will be the custodian of your travel allowance, and you will be notified about it. You will need to follow the reimbursement procedures of that organization, and should ask your mentor or coordinator to let you know what they are.
+<p>If a participating organization has a process for reimbursing travelling expenses of its contributors, it might choose to do so itself for its Outreachy interns. In that case the organization will be the custodian of your travel allowance, and you will be notified about it. You will need to follow the reimbursement procedures of that organization, and should ask your mentor or coordinator to let you know what they are.</p>
 
 {% endblock %}
