Travel page: fix bug in anchor conversion

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -162,7 +162,7 @@ Outreachy Travel Stipend
 
 <p>More events can be found on the <a href="http://opensource.com/resources/conferences-and-events-monthly">opensource.com event calendar</a> and the <a href="https://old.lwn.net/Calendar/">Linux Weekly News event calendar</a>. Events with travel sponsorships can be found at <a href="https://diversitytickets.org/en/events">diversitytickets.org</a>. Events that are looking for speaking proposals that have a good Code of Conduct are often promoted by <a href="https://twitter.com/CallbackWomen">@callbackwomen on Twitter</a>.</p>
 
-<h1 step='preapproval'>What types of travel need pre-approval?</h1>
+<h1 id='preapproval'>What types of travel need pre-approval?</h1>
 
 <p>Please read <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Conservancy's policy</a> carefully for full details on what can be covered and what might need additional pre-approval. For example, you will need to get pre-approval for conference registrations exceeding $100 a day, hotel costs exceeding per-diem for your destination, airfare and train tickets purchased less than 14 days in advance, and car rentals. Conservancy's policy is the final authority on what can be covered.</p>
 
