Link to travel stipend page in navigation, mentor dashboard, and emails

--- a/outreachyhome/templates/partials/_navigation.html
+++ b/outreachyhome/templates/partials/_navigation.html
@@ -39,7 +39,7 @@
     <div class="dropdown-menu" aria-labelledby="navbarInterns">
       <a class="dropdown-item" href="{% url 'alums' %}">Past Interns</a>
       <a class="dropdown-item" href="{% url 'dashboard' %}">My Internship</a>
-      <a class="dropdown-item" href="https://wiki.gnome.org/Outreachy/TravelAllowance">Travel Stipend</a>
+      <a class="dropdown-item" href="{% url 'travel-stipend' %}">Travel Stipend</a>
       <a class="dropdown-item" href="/opportunities/">Opportunities</a>
     </div>
   </li>
