Travel stipend: fix table

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -85,7 +85,7 @@ Outreachy Travel Stipend
 
 <p>Here are some examples of generally themed FOSS events, along with their approximate dates:</p>
 
-<table class="table table-bordered">
+<table class="table table-striped table-bordered">
 	<thread class="thread-dark">
 	<tr>
 		<th scope="col">Conference</th>
