Travel stipend: clarify wording
Some interns thought they needed to ask the Outreachy PLC for
preapproval always, and I think it's because of the wording of that
bullet point.

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -12,7 +12,7 @@ Outreachy Travel Stipend
 
 <p>You can use the travel allowance to go to a conference, event, or meeting that is relevant to your internship project, or is a Free and Open Source Software (FOSS) conference.</p>
 
-<p>Please read the following page carefully before booking any travel to conferences.</p>
+<p>Please read the following page carefully before booking any travel.</p>
 
 <h1 id="steps">Steps to take before and after you travel</h1>
 
@@ -21,7 +21,7 @@ Outreachy Travel Stipend
 
 	<li>Confirm with your mentor that the <a href="{% url 'travel-stipend' %}#events">event or conference meets our requirements</a>.</li>
 
-	<li><a href="{% url 'travel-stipend' %}#preapproval">Check whether you need pre-approval</a> from the Outreachy PLC for your travel expenses.</li>
+	<li><a href="{% url 'travel-stipend' %}#preapproval">Check whether you need pre-approval</a> for your travel expenses before booking your travel.</li>
 
 	<li><a href="{% url 'travel-stipend' %}#scholarships">Apply for any scholarships</a> your conference offers to cover travel costs.</li>
 
@@ -31,7 +31,7 @@ Outreachy Travel Stipend
 
 	<li>During your event, take notes about what you learned or accomplished, and how it improved your ability to contribute to free and open source software, for your trip report blog post.</li>
 
-	<li>Publish your trip report blog post.</li>
+	<li>Publish your trip report on your blog.</li>
 
 	<li>Submit a <a href="{% url 'travel-stipend' %}#reimbursement">reimbursement request</a> within 2 weeks of the last day of travel. If you submit a reimbursement more than 90 days after the last day of your trip, Conservancy will not refund your travel.</li>
 </ol>
