Note taking pictures might help

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -29,7 +29,7 @@ Outreachy Travel Stipend
 
 	<li>While on your trip, you may need to <a href="{% url 'travel-stipend' %}#receipts">save some receipts</a>.</li>
 
-	<li>During your event, take notes about what you learned or accomplished, and how it improved your ability to contribute to free and open source software, for your trip report blog post.</li>
+	<li>During your event, take notes about what you learned or accomplished, and how it improved your ability to contribute to free and open source software, for your trip report blog post. You may want to take pictures, if the event photography policy allows it.</li>
 
 	<li>Publish your trip report on your blog.</li>
 
