Update travel policy wording to show that travel is valid for two years.
Also, mention that we use the official internship start date, not a late
or early start date.

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -38,7 +38,9 @@ Outreachy Travel Stipend
 
 <h1 id='timeframe'>When does the travel have to happen?</h1>
 
-<p>The travel allowance is available to you for travel that starts between the day the acceptance results are announced and a year from the beginning of the internship. The one year window is provided to make sure that the travel allowance can be used for travelling to any major yearly event. Currently, we are also typically able to provide extensions for expired travel allowances, upon request. If your unused travel allowance has expired and you have identified a relevant event you could use it for, please request an extension before making plans for the trip by e-mailing outreachy AT SPAMFREE sfconservancy DOT org .</p>
+<p>Outreachy's travel stipends are valid for two years. This ensures that the travel allowance can be used for travelling to events that happen once a year. We cannot provide exceptions for expired travel allowances.</p>
+
+<p>The travel allowance is valid for travel that starts between when your internship was announced and two years from the official internship start date. If you started your internship early or late, use the official start dates below.</p>
 
 <h2>Active</h2>
 
