Travel stipend: wordsmithing

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -71,16 +71,16 @@ Outreachy Travel Stipend
 	<li>June - September 2013 internship round, the travel allowance is available for travel that begins any time between May 27, 2013 and November 8, 2015 (extended because was not clearly communicated originally; travel allowance availability dates will not be extended for other rounds)</li>
 </ul>
 
-<h2>Can the travel allowance be used in parts?</h2>
+<h2>Can the travel allowance be used for multiple events?</h2>
 
-<p>Yes, you can use your travel allowance in parts for multiple trips. While you can combine multiple trips in one reimbursement request, we ask that you submit your reimbursement request within two weeks of the completion of the earliest trip. Note that Conservancy does not reimburse for trips that completed more than 90 days before the request was submitted.</p>
+<p>Yes, you can use your travel allowance for multiple trips, if the first trip doesn't use up the entire $500 USD travel stipend. You can combine multiple trips in one reimbursement request. However, please submit your reimbursement request within two weeks of the completion of the earliest trip. Note that Conservancy does not reimburse for trips that completed more than 90 days before the request was submitted.</p>
 
 <h1 id='events'>Event requirements</h1>
 
 <p>You can use the travel allowance to travel or gain admittance to conferences or meetings, which meet the following two requirements:</p>
 
 <ol>
-	<li><b>Strong free and open source software component.</b> As the Software Freedom Conservancy is a 501(c)(3) charity in the United States, all activity supported by the travel allowance must forward the organization's mission to promote free and open source software in the public interest. The event you are attending or the material you are presenting needs to have a strong free and open source software component.</li>
+	<li><b>Strong free and open source software component.</b> As the Software Freedom Conservancy is a 501(c)(3) charity in the United States, all activity supported by the travel allowance must forward the organization's mission to promote free and open source software in the public interest. The event you are attending or the material you are presenting must have a strong free and open source software component.</li>
 
 	<li><b>Your mentor considers it most relevant.</b> Each organization that participates in Outreachy has events that are specific to it or the technologies it uses, which might be most relevant for you to attend. Please consult with your mentor about what is the best and most relevant to your project and organization way to use your travel allowance. In some cases, your mentor and you might agree that a generally themed FOSS event close to you is the most relevant use of your travel allowance due to geographical considerations. Do not book your travel before getting a confirmation from your mentor or organization coordinator that they consider it most relevant and will want your travel allowance applied to it.</li>
 </ol>
