--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -82,7 +82,7 @@ Outreachy Travel Stipend
 <ol>
 	<li><b>Strong free and open source software component.</b> As the Software Freedom Conservancy is a 501(c)(3) charity in the United States, all activity supported by the travel allowance must forward the organization's mission to promote free and open source software in the public interest. The event you are attending or the material you are presenting must have a strong free and open source software component.</li>
 
-	<li><b>Your mentor considers it most relevant.</b> Each organization that participates in Outreachy has events that are specific to it or the technologies it uses, which might be most relevant for you to attend. Please consult with your mentor about what is the best and most relevant to your project and organization way to use your travel allowance. In some cases, your mentor and you might agree that a generally themed FOSS event close to you is the most relevant use of your travel allowance due to geographical considerations. Do not book your travel before getting a confirmation from your mentor or organization coordinator that they consider it most relevant and will want your travel allowance applied to it.</li>
+	<li><b>Your mentor considers it most relevant.</b> Each community that participates in Outreachy has community events or events for the technologies it uses. Typically, community-specific events are relevant for interns to attend. Please consult with your mentor about what is the best and most relevant to your project and community way to use your travel allowance. In some cases, your mentor and you might agree that a generally themed FOSS event close to you is the most relevant use of your travel allowance due to geographical considerations. Do not book your travel before getting a confirmation from your mentor or community coordinator that they consider it most relevant and will want your travel allowance applied to it.</li>
 </ol>
 
 <p>Here are some examples of generally themed FOSS events, along with their approximate dates:</p>
@@ -182,7 +182,7 @@ Outreachy Travel Stipend
 
 <h1>What can the travel allowance cover?</h1>
 
-<p>Generally, the travel allowance can cover transportation, lodging, visa, meal, internet, or admission expenses for activities through which you can improve your understanding of your project, organization, and free and open source software by working with or learning from other people.  You can use your travel allowance to go to an office of the organization you are working with, an event where other contributors from your organization will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.</p>
+<p>Generally, the travel allowance can cover transportation, lodging, visa, meal, internet, or admission expenses for activities through which you can improve your understanding of your project, the community, and free and open source software by working with or learning from other people.  You can use your travel allowance to go to an office of the community you are working with, an event where other contributors from your community will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.</p>
 
 <h2 id='airfare'>Airfare</h2>
 <p>For air travel, please be sure to comply with Conservancy's <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">low fare policy</a> and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">required</a> for Conservancy to do an airfare reimbursement.</p>
@@ -232,8 +232,8 @@ I have not included receipts for things that fall under the Meals and Incidental
 
 <p>Within 30 days of your e-mail, Conservancy will send you the reimbursement or inform you if it requires additional information.</p>
 
-<h1>How do I get reimbursed for the travel allowance by my organization?</h1>
+<h1>How do I get reimbursed for the travel allowance by my community?</h1>
 
-<p>If a participating organization has a process for reimbursing travelling expenses of its contributors, it might choose to do so itself for its Outreachy interns. In that case the organization will be the custodian of your travel allowance, and you will be notified about it. You will need to follow the reimbursement procedures of that organization, and should ask your mentor or coordinator to let you know what they are.</p>
+<p>If a participating community has a process for reimbursing travelling expenses of its contributors, it might choose to do so itself for its Outreachy interns. In that case the community will be the custodian of your travel allowance, and you will be notified about it. You will need to follow the reimbursement procedures of that community, and should ask your mentor or coordinator to let you know what they are.</p>
 
 {% endblock %}
