Remove details that should be referenced in the Conservancy travel policy

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -174,7 +174,7 @@ Outreachy Travel Stipend
 
 <h1 id='preapproval'>What types of travel need pre-approval?</h1>
 
-<p>Please read <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Conservancy's policy</a> carefully for full details on what can be covered and what might need additional pre-approval. For example, you will need to get pre-approval for conference registrations exceeding $100 a day, hotel costs exceeding per-diem for your destination, airfare and train tickets purchased less than 14 days in advance, and car rentals. Conservancy's policy is the final authority on what can be covered.</p>
+<p><a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Please read Conservancy's policy</a> carefully for full details on what expenses might need additional pre-approval. Conservancy's policy is the final authority on what can be covered.</p>
 
 <p>Do not book your travel before getting any necessary pre-approval from Outreachy and Conservancy.</p>
 
@@ -182,7 +182,7 @@ Outreachy Travel Stipend
 
 <h1>What can the travel allowance cover?</h1>
 
-<p>Generally, the travel allowance can cover transportation, lodging, visa, meal, internet, or admission expenses for activities through which you can improve your understanding of your project, the community, and free and open source software by working with or learning from other people.  You can use your travel allowance to go to an office of the community you are working with, an event where other contributors from your community will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.</p>
+<p>Generally, the travel allowance can cover expenses like transportation, lodging, visa fees, event attendance fees, and meals. <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Read Conservancy's travel policy</a> carefully for full details. You can use your travel allowance to go to an office of the community you are working with, an event where other contributors from your community will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.</p>
 
 <h2 id='airfare'>Airfare</h2>
 <p>For air travel, please be sure to comply with Conservancy's <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">low fare policy</a> and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">required</a> for Conservancy to do an airfare reimbursement.</p>
